[package]
name = "easypqp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easypqp"
path = "src/main.rs"

[dependencies]
easypqp-core = { path = "../easypqp-core" }
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
sage-cloudpath = { git = "https://github.com/lazear/sage", branch = "master" }
redeem-properties = { git = "https://github.com/singjc/redeem.git", branch = "master" }
anyhow = "1.0"
num_cpus = "1.13"
csv = "1"
clap = { version="4.0", features = ["cargo", "unicode"] }
env_logger = "0.11.5"
log = "0.4.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"