[package]
name = "easypqp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easypqp-insilico"
path = "src/main.rs"

[dependencies]
easypqp-core = { path = "../easypqp-core" }
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
redeem-properties = { git = "https://github.com/singjc/redeem.git", branch = "develop" }
anyhow = "1.0"
csv = "1"
clap = { version="4.0", features = ["cargo", "unicode"] }
env_logger = "0.11.5"
log = "0.4.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
