[package]
name = "easypqp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
sage-cloudpath = { git = "https://github.com/lazear/sage", branch = "master" }
redeem-properties = { git = "https://github.com/singjc/redeem.git", branch = "master" }
rustyms = "0.10.0"
log = "0.4.0"
rayon = "1.5"
itertools = "0.14.0"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ndarray = "0.15" # linfa-svm requires ndarray 0.15