[package]
name = "easypqp-core"
version = "0.1.5"
edition = "2021"

[dependencies]
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
redeem-properties = { git = "https://github.com/singjc/redeem.git", branch = "develop" }
rustyms = "0.10.0"
chrono = "0.4"
log = "0.4.0"
rayon = "1.5"
crossbeam-channel = "0.5.15"
itertools = "0.14.0"
regex = "1.8.5"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
sysinfo = "0.35"
