[package]
name = "easypqp-py"
version = "0.1.3"
edition = "2024"

[lib]
name = "easypqp_rs"
crate-type = ["cdylib"] 

[dependencies]
easypqp-cli = { path = "../easypqp-cli" }
pyo3 = { version = "0.24.2", features = ["extension-module", "anyhow"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.5"

[features]
vendored-openssl = ["easypqp-cli/vendored-openssl"]