[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "easypqp-rs"
version = "0.1.0"
description = "Python bindings for EasyPQP-rs"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: PyPy",
]

